Magically fix performance issues on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,8 @@ sleep-chart
     overflow-x:   auto;
     overflow-y:   hidden;
     white-space:  nowrap;
+
+    -webkit-overflow-scrolling: touch;
 }
 
 sleep-chart.nojs
